--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,11 @@
   box-sizing: border-box;
   font-family: "PT Sans", sans-serif;
 }
+
+img {
+  border: none;
+  border-radius: 4px;
+  padding: 5px;
+  width: 150px;
+  height: 140px;
+}
